--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="/static/build/main.js"></script></body>
+<script type="text/javascript" src="/test/static/build/main.js"></script></body>
 </html>
