--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <title>Личный кабинет туристического агенства</title>
 </head>
 <body>
-<div id="root"></div>
+<div id="root">test</div>
 <script type="text/javascript" src="/test/static/build/main.js"></script></body>
 </html>
